Revision history for Perl distribution PathTools.

3.69
- avoid loading modules repeatedly at runtime
- replace 'use vars' by 'our'

3.68
- avoid warning from pre-5.8 code for detecting tainted values
- make taint.t detect that a pre-5.8 Perl supports tainting
- avoid a dynamic linking problem on Perl 5.6

3.67 - Mon Feb 27 09:33:04 EST 2017
- Add security usage note to File::Spec::no_upwards

3.66 - Sat Nov 19 10:30:19 MST 2016
- white space change so can compile under C++11

3.65 - Mon, 25 Jul 2016 23:15:33 -0700
- (perl #127384)(CVE-2016-1238)

3.64 - Tue May 24 10:00:19 MST 2016
- just minor pod changes to silence Pod::Checker

3.62 - Mon Jan 11 08:39:19 EST 2016
- ensure File::Spec::canonpath() preserves taint (CVE-2015-8607)

3.61 - Sun Dec 20 12:00:00 EST 2015 (bleadperl only release)
- improve performance of cwd on Win32 miniperl

3.60 - Wed Nov 18 21:28:01 EST 2015
- add File::Spec::AmigaOS -- and actually ship it, this time

3.59 - Fri Nov 13 18:38:01 EST 2015
- no changes since 5.58_01

3.58_01 - Mon Nov  9 17:35:28 EST 2015 - TRIAL RELEASE
- add File::Spec::AmigaOS
- fix INSTALLDIRS on post-5.10 perls

3.56_02 - Thu Jul 16 11:28:57 EDT 2015 - TRIAL RELEASE
- fix $VERSION in loaded modules

3.56_01 - Sat Jul 11 18:07:28 EDT 2015 - TRIAL RELEASE
- CPAN release of the PathTools included in perl v5.22.0
- support for z/OS sysplexed systems
- long-deprecated "fixpath" and "eliminate_macros" VMS functions removed
- avoid turning leading // into / on cygwin
- Force barename base to be a directory in File::Spec::VMS:abs2rel
- Revise Unix syntax detection File::Spec::VMS::abs2rel
- compiles on Android now
- fewer compiler warnings
- eliminate some runtime perl warnings, too

3.47 - Fri May 23 18:52:00 2014
- Improved Android support.
- File::Spec::Unix->tmpdir: Always return an absolute path
- File::Spec now has an XS version for performance.
- QNX and VMS portability
- tmpdir is updated when the environment changes.

3.40 - Wed Jan 16 07:30:00 2013